--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -10,6 +10,7 @@ package-mode=false
 python = "3.10.15"
 streamlit = "^1.26.0"
 requests = "^2.31.0"
+streamlit-chat = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.0"
