--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -11,6 +11,8 @@ python = "3.10.15"
 streamlit = "^1.26.0"
 requests = "^2.31.0"
 streamlit-chat = "^0.1.1"
+fpdf = "^1.7.2"
+python-docx = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.0"
